# pyrepo-template

./: .flake8  .gitignore  .gitnore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  README.pypi.md  package.sh  pyproject.toml  requirements.txt  setup.py
package/: main.py
src/: cli.py
tests/: __init__.py  test.py
