[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_name"
version = "0.1.0"
authors = [
    { name = "Andrew Ryan", email = "andrewryan@duck.com" }
]
description = "desctiption"
keywords = ["keyword1", "keyword2", "keyword3"]
readme = "README.pypi.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/andreweryan/repo_name"
"Bug Tracker" = "https://github.com/andreweryan/repo_name/issues"
"Source Code" = "https://github.com/andreweryan/repo_name"

[tool.setuptools]
packages = ["repo_name"]

[project.scripts]
repo_name = "repo_name.cli:main"
